Issue #424: Add CLI options for specific query execution
* Various updates before merge.
* Code refactoring on SNMP Extension